--- a/res/layout/select_days.xml
+++ b/res/layout/select_days.xml
@@ -23,6 +23,6 @@
         <Button android:text="@android:string/ok" android:focusable="true" android:layout_width="match_parent" android:layout_weight="1" android:layout_height="match_parent" android:id="@+id/ok"></Button>
         <Button android:text="@android:string/cancel" android:focusable="true" android:layout_width="match_parent" android:layout_weight="1" android:layout_height="match_parent" android:id="@+id/cancel"></Button>
     </LinearLayout>
-    <ListView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:id="@+id/selectedDaysList"></ListView>    
+    <ListView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:id="@+id/daysList"></ListView>    
     
 </RelativeLayout>
