--- a/res/layout/alarm_alert.xml
+++ b/res/layout/alarm_alert.xml
@@ -35,7 +35,7 @@
             android:ellipsize="end"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" android:text="@android:string/untitled"/>
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="1dip"
@@ -45,7 +45,7 @@
             android:layout_marginLeft="10dip"
             android:layout_marginRight="10dip"/>
 
-        <com.zhaoshouren.android.apps.deskclock.ui.DigitalClockLayout
+        <com.zhaoshouren.android.apps.deskclock.ui.widget.DigitalClockLayout
             style="@style/clock"
             android:paddingTop="30dip"
             android:paddingBottom="30dip"
@@ -65,7 +65,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="?android:attr/textColorPrimary"/>
 
-        </com.zhaoshouren.android.apps.deskclock.ui.DigitalClockLayout>
+        </com.zhaoshouren.android.apps.deskclock.ui.widget.DigitalClockLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -76,21 +76,14 @@
                 android:id="@+id/snooze"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
+                android:layout_weight="1"
                 android:text="@string/alarm_alert_snooze_text" />
-
-            <!-- blank stretchable view -->
-            <View
-                android:layout_width="2dip"
-                android:layout_height="2dip"
-                android:layout_gravity="fill_horizontal"
-                android:layout_weight="1"/>
-
+                
             <Button
                 android:id="@+id/dismiss"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
+                android:layout_weight="1"
                 android:text="@string/alarm_alert_dismiss_text" />
 
         </LinearLayout>
