--- a/res/layout/alarm_time.xml
+++ b/res/layout/alarm_time.xml
@@ -28,7 +28,7 @@
             minimum height. If the bar is a checkbox, it is too tall and is
             clipped on the right.
     -->
-    <com.zhaoshouren.android.apps.deskclock.ui.DontPressWithParentLayout android:id="@+id/indicator"
+    <com.zhaoshouren.android.apps.deskclock.ui.widget.DontPressWithParentLayout android:id="@+id/indicator"
         style="@style/alarm_list_left_column"
         android:background="@drawable/clock_selector"
         android:gravity="center"
@@ -48,7 +48,7 @@
             android:layout_gravity="center"
             android:paddingTop="4dip"
             android:src="@drawable/ic_indicator_off" />
-    </com.zhaoshouren.android.apps.deskclock.ui.DontPressWithParentLayout>
+    </com.zhaoshouren.android.apps.deskclock.ui.widget.DontPressWithParentLayout>
 
     <ImageView
         android:src="@drawable/divider_vertical_dark"
@@ -104,7 +104,7 @@
 
         </LinearLayout>
 
-        <TextView android:id="@+id/selectedDays"
+        <TextView android:id="@+id/days"
             android:includeFontPadding="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
