--- a/res/layout/appwidget_digital.xml
+++ b/res/layout/appwidget_digital.xml
@@ -45,6 +45,7 @@
             android:shadowDy="0"
             android:shadowRadius="4"
             android:duplicateParentState="true"
+            android:text="12:00"
             />
         <TextView android:id="@+id/amPm"
             android:layout_width="wrap_content"
@@ -60,6 +61,7 @@
             android:shadowDy="0"
             android:shadowRadius="4"
             android:duplicateParentState="true"
+            android:text="AM"
             />
     </LinearLayout>
 
@@ -74,6 +76,7 @@
         android:shadowDy="0"
         android:shadowRadius="4"
         android:duplicateParentState="true"
+        android:text="Monday, January 1"
         />
 
 </LinearLayout>
