--- a/res/layout/desk_clock_time_date.xml
+++ b/res/layout/desk_clock_time_date.xml
@@ -23,7 +23,7 @@
     android:focusable="true"
     >
 
-    <com.zhaoshouren.android.apps.deskclock.ui.DigitalClockLayout android:id="@+id/time"
+    <com.zhaoshouren.android.apps.deskclock.ui.widget.DigitalClockLayout android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -59,7 +59,7 @@
             android:shadowRadius="4"
             android:duplicateParentState="true"
             />
-    </com.zhaoshouren.android.apps.deskclock.ui.DigitalClockLayout>
+    </com.zhaoshouren.android.apps.deskclock.ui.widget.DigitalClockLayout>
 
     <TextView android:id="@+id/date"
         android:layout_width="wrap_content"
