--- a/res/layout/set_alarm_preference.xml
+++ b/res/layout/set_alarm_preference.xml
@@ -22,14 +22,15 @@
     android:orientation="vertical">
 
     <ListView android:id="@android:id/list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:drawSelectorOnTop="false"/>
+        android:drawSelectorOnTop="false" 
+        android:layout_width="wrap_content" 
+        android:layout_weight="1" 
+        android:layout_height="wrap_content"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="5dip"
         android:orientation="horizontal"
         style="@android:style/ButtonBar">
 
