--- a/res/layout/day_list_item.xml
+++ b/res/layout/day_list_item.xml
@@ -19,5 +19,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" android:gravity="fill_vertical">
-    <CheckedTextView android:text="CheckedTextView" android:id="@+id/day" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_width="match_parent"></CheckedTextView>
+    <CheckBox
+        android:id="@+id/day"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:text="@string/day_of_week" />
 </RelativeLayout>
