--- a/res/layout/alarm_alert.xml
+++ b/res/layout/alarm_alert.xml
@@ -52,7 +52,7 @@
             android:baselineAligned="true"
             android:gravity="center_horizontal">
 
-            <TextView android:id="@+id/timeDisplay"
+            <TextView android:id="@+id/time_display"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="64sp"
