--- a/res/layout/alarm_alert.xml
+++ b/res/layout/alarm_alert.xml
@@ -45,7 +45,7 @@
             android:layout_marginLeft="10dip"
             android:layout_marginRight="10dip"/>
 
-        <com.zhaoshouren.android.apps.deskclock.ui.widget.DigitalClockLayout
+        <com.zhaoshouren.android.apps.clock.ui.widget.DigitalClockLayout
             style="@style/clock"
             android:paddingTop="30dip"
             android:paddingBottom="30dip"
@@ -65,7 +65,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="?android:attr/textColorPrimary"/>
 
-        </com.zhaoshouren.android.apps.deskclock.ui.widget.DigitalClockLayout>
+        </com.zhaoshouren.android.apps.clock.ui.widget.DigitalClockLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
