--- a/res/layout/alarm_time.xml
+++ b/res/layout/alarm_time.xml
@@ -28,14 +28,14 @@
             minimum height. If the bar is a checkbox, it is too tall and is
             clipped on the right.
     -->
-    <com.zhaoshouren.android.apps.deskclock.ui.widget.DontPressWithParentLayout android:id="@+id/indicator"
+    <com.zhaoshouren.android.apps.clock.ui.widget.DontPressWithParentLayout android:id="@+id/indicator"
         style="@style/alarm_list_left_column"
         android:background="@drawable/clock_selector"
         android:gravity="center"
         android:orientation="vertical">
         <CheckBox android:id="@+id/clock_onoff"
-            android:focusable="false"
-            android:clickable="false"
+            android:focusable="true"
+            android:clickable="true"
             android:background="@drawable/indicator_clock_onoff"
             android:duplicateParentState="true"
             android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
             android:layout_gravity="center"
             android:paddingTop="4dip"
             android:src="@drawable/ic_indicator_off" />
-    </com.zhaoshouren.android.apps.deskclock.ui.widget.DontPressWithParentLayout>
+    </com.zhaoshouren.android.apps.clock.ui.widget.DontPressWithParentLayout>
 
     <ImageView
         android:src="@drawable/divider_vertical_dark"
@@ -82,14 +82,16 @@
                 android:layout_height="wrap_content"
                 android:paddingRight="6dip"
                 android:textSize="28sp"
-                android:textColor="?android:attr/textColorPrimary"/>
+                android:textColor="?android:attr/textColorPrimary"
+                android:hint="12:00"/>
 
             <TextView android:id="@+id/amPm"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textStyle="bold"
-                android:textColor="?android:attr/textColorPrimary"/>
+                android:textColor="?android:attr/textColorPrimary"
+                android:hint="AM"/>
 
             <TextView android:id="@+id/label"
                 android:layout_width="wrap_content"
