--- a/res/layout/alarm_list_item.xml
+++ b/res/layout/alarm_list_item.xml
@@ -1,63 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent" >
+
+    <CheckBox
+        android:id="@+id/alarm_on_off"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:duplicateParentState="true"
+        android:background="@null"
+        android:button="@null"
+        android:drawableBottom="@drawable/indicator_bar_onoff"
+        android:drawablePadding="0dip"
+        android:drawableTop="@drawable/indicator_clock_onoff"
+        android:lines="0"
+        android:paddingBottom="6dip"
+        android:paddingLeft="10dip"
+        android:paddingRight="10dip"
+        android:paddingTop="4dip"
+        android:textOff=""
+        android:textOn="" />
     
-<!--     <CheckBox android:id="@+id/alarmOnOff" -->
-<!--          android:background="@drawable/indicator_clock_onoff" -->
-<!--          android:layout_height="wrap_content" -->
-<!--          android:layout_width="wrap_content" -->
-<!--          android:layout_gravity="center" -->
-<!--          android:button="@null" /> -->
-<!--     <ImageView -->
-<!--         android:src="@drawable/divider_vertical_dark" -->
-<!--         android:background="?android:attr/windowBackground" -->
-<!--         android:layout_width="wrap_content" -->
-<!--         android:layout_height="match_parent" -->
-<!--         android:paddingTop="4dip" -->
-<!--         android:paddingBottom="4dip" -->
-<!--         android:scaleType="fitXY" -->
-<!--         android:gravity="fill_vertical" /> -->
-<!--     <RelativeLayout  -->
-<!--     	android:id="@+id/alarmInfo" -->
-<!--         android:layout_width="wrap_content" -->
-<!--         android:layout_height="match_parent" -->
-<!--         android:gravity="center_vertical" -->
-<!--         android:layout_weight="1" -->
-<!--         android:paddingLeft="16dip" -->
-<!--         android:paddingRight="16dip">  -->
-<!-- 		<TextView  -->
-<!-- 			android:textAppearance="?android:attr/textAppearanceLarge"  -->
-<!-- 			android:layout_height="wrap_content"  -->
-<!-- 			android:layout_width="wrap_content"  -->
-<!-- 			android:id="@+id/time"  -->
-<!-- 			android:text="7:00"  -->
-<!-- 			android:layout_alignLeft="@+id/alarmInfo"/> -->
-<!--     	<TextView  -->
-<!--     		android:textAppearance="?android:attr/textAppearanceSmall"  -->
-<!--     		android:layout_width="wrap_content"  -->
-<!--     		android:layout_height="wrap_content"  -->
-<!--     		android:id="@+id/amPm"  -->
-<!--     		android:text="pm"  -->
-<!--     		android:layout_toRightOf="@+id/time"  -->
-<!--     		android:layout_alignBaseline="@+id/time"/> -->
-<!--     	<TextView  -->
-<!--     		android:textAppearance="?android:attr/textAppearanceSmall"  -->
-<!--     		android:layout_width="wrap_content"  -->
-<!--     		android:layout_height="wrap_content"  -->
-<!--     		android:id="@+id/days"  -->
-<!--     		android:text="Mon, Tue"  -->
-<!--     		android:layout_below="@+id/time"/> -->
-<!--     	<TextView  -->
-<!--     		android:textAppearance="?android:attr/textAppearanceMedium"  -->
-<!--     		android:layout_width="fill_parent"  -->
-<!--     		android:id="@+id/label"  -->
-<!--     		android:text="Label"  -->
-<!--     		android:layout_toRightOf="@+id/amPm"  -->
-<!--     		android:layout_alignBaseline="@+id/time"  -->
-<!--     		android:layout_height="wrap_content"/> -->
-<!--     </RelativeLayout> -->
-    
-    
-    
-</LinearLayout>
+	<ImageView
+	    android:id="@+id/divider"
+	    android:layout_width="wrap_content"
+	    android:layout_height="fill_parent"
+	    android:layout_alignBottom="@+id/alarm_on_off"
+	    android:layout_alignTop="@+id/alarm_on_off"
+	    android:layout_toRightOf="@+id/alarm_on_off"
+	    android:background="?android:attr/windowBackground"
+	    android:paddingBottom="2dip"
+	    android:paddingTop="2dip"
+	    android:scaleType="fitXY"
+	    android:src="@drawable/divider_vertical_dark" />
+
+    <RelativeLayout
+        android:id="@+id/alarm_info"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true" 
+        android:layout_toRightOf="@+id/divider" >
+<!--     <RelativeLayout -->
+<!--         android:id="@+id/alarm_info" -->
+<!--         android:layout_width="fill_parent" -->
+<!--         android:layout_height="wrap_content" -->
+<!--         android:layout_centerVertical="true" > -->
+        <TextView
+            android:id="@+id/label"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+			android:layout_alignBaseline="@+id/time"
+       		android:layout_toRightOf="@+id/am_pm"
+            android:paddingLeft="10dip"
+            android:paddingRight="4dip"
+            android:singleLine="true"
+            android:text="Label"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="?android:attr/textColorTertiary" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:paddingLeft="10dip"
+            android:text="7:00"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+        <TextView
+            android:id="@+id/am_pm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/time"
+            android:layout_alignBottom="@+id/time"
+            android:layout_toRightOf="@+id/time"
+            android:paddingLeft="2dip"
+            android:text="PM"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:textColor="?android:attr/textColorPrimary"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/days"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/time"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/time"
+            android:paddingLeft="10dip"
+            android:paddingRight="4dip"
+            android:text="Mon, Tue"
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+    </RelativeLayout>
+
+</RelativeLayout>
