--- a/res/layout/select_days_list_item.xml
+++ b/res/layout/select_days_list_item.xml
@@ -18,12 +18,15 @@
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" android:gravity="fill_vertical">
+    android:layout_height="match_parent" >
+
     <CheckBox
         android:id="@+id/day"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:text="@string/day_of_week" />
+        android:layout_marginLeft="10dip"
+        android:paddingLeft="50dip"
+        android:hint="@string/day_of_week" />
+
 </RelativeLayout>
